***********************************
version-2.3.0dev

NEW FEATURES

  - Support BAM/CRAM files as input #171, #200
  - Generate CRAM files with option --cram

***********************************
version-2.2.0

NEW FEATURES

  - By default, the `work/` folder is now deleted. Use `--disableAutoClean` to turn off this function #183
  - Add a filtering step for somatic variants based on VAF/DP/MAF (`--filterSomaticDP`, `--filterSomaticVAF`, `--filterSomaticMAF`)
  - New `--skipMutectOrientationModel` option to turn off the learn orientation model step
  - Add `--facetsOpts` parameter #168
  - Filter out low mapping samples and emtpy VCFs #178
  - Add MSIsensor-pro for tumor only samples (`--msiBaselineConfig`) #143
  - Add `-profile testwgs` and `-profile testwes` for WES and WGS test set
  - Check design file before running the pipeline

SIGNIFICANT USER-VISIBLE CHANGES

  - The gene coverage quality controls is now deprecated
  - Clean haplotypecaller sub-workflow to remove filtering #176
  - Use samtools flagstat for alignment statistics #179
  - Sort BAM file on-the-fly in the mapping command #181
  - Remove intersection with bed file for WES analysis #159
  - Replace all [-. ] in sample name by '_' #163
  - Distinguish the annotation of somatic and germline variants
  - Speed-up parallel processing and avoid waiting for all the samples at the different steps #158
  - Update skip options
  - Update Facets outputs #168
  - Update mosdepth report in MultiQC #161

BUG FIXES

  - Fix bug with HaplotypeCaller for WGS in parallel mode (#175)

***********************************
version-2.1.1

NEW FEATURES

  - Add TMB in Tumor Only mode

BUG FIXES

  - Bug in --skipFastqc option. Typo in modules.conf

SIGNIFICANT USER-VISIBLE CHANGES

  - Bam files after bqsr are exported by default. If --skipBQSR is used, the bams after filering will be exported

***********************************
version-2.1.0

NEW FEATURES
